<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/room_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


    </android.support.design.widget.AppBarLayout>

    <ProgressBar
        android:id="@+id/room_load_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ListView
        android:id="@+id/room_members"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toTopOf="@+id/room_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

    </ListView>

    <TextView
        android:id="@+id/room_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting_host"
        android:padding="16dp"

        app:layout_constraintHorizontal_bias="0"

        app:layout_constraintTop_toBottomOf="@+id/room_members"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/room_poke_fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_priority_high_white_24dp"
        android:visibility="gone"
        tools:visibility="visible"

        app:layout_constraintBottom_toTopOf="@+id/member_set_status"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/member_set_status"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_check_white_24dp"
        android:visibility="gone"
        tools:visibility="visible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>