...
        app:layout_constraintBottom_toBottomOf="@+id/cancel_match"
        app:layout_constraintStart_toEndOf="@+id/cancel_match"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/start_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_media_play"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ListView
        android:id="@+id/member_list_joined"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
